Fixed image name overflow

--- a/src/sass/_register.scss
+++ b/src/sass/_register.scss
@@ -43,7 +43,7 @@
   }
 
   &__attached {
-    word-wrap: break-word;
+    word-break: break-all;
     // margin: 0 10px 10px 10px;
   }
 
